--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Retrieve the secret and decode it to a file
         env:
-          CERTIFICATE_BASE64: ${{ secrets.hidden }}
+          CERTIFICATE_BASE64: ${{ secrets.HIDDEN }}
         run: |
           echo $CERTIFICATE_BASE64 | base64 --decode > hidden.py
       - name: Show certificate information
