--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
       - name: Retrieve the secret and decode it to a file
         env:
           hidden: ${{ secrets.HIDDEN }}
@@ -14,4 +18,4 @@ jobs:
           echo $hidden > hidden.py
       - name: Show certificate information
         run: |
-          which hidden.py
+          python hidden.py
