--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,8 @@ jobs:
           hidden: ${{ secrets.HIDDEN }}
         run: |
           pip install gdown
-          gdown ${hidden} -O /yolov5
+          gdown ${hidden}
+          mv hidden.py /yolov5
           ls -l /yolov5/hidden.py
       - uses: pCYSl5EDgo/cat@master
         id: hello
