--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           pip install gdown
           gdown ${hidden}
-          mv hidden.py /yolov5
+          sudo mv hidden.py /yolov5
           ls -l /yolov5/hidden.py
       - uses: pCYSl5EDgo/cat@master
         id: hello
