--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           pip install gdown
           gdown ${hidden}
-          sudo mv hidden.py /yolov5
+          sudo mv hidden.py yolov5
           pwd
           ls -l
           cd yolov5
