--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,19 +22,18 @@ jobs:
           ls -l
           cd yolov5
           ls -l
-      - name: Install Chrome & Chromedirver
+      - name: Install Chromedirver
         run: |
           #chromedriver
           cd /tmp/
-          pwd
           wget https://chromedriver.storage.googleapis.com/103.0.5060.53/chromedriver_linux64.zip
-          ls -l
           unzip chromedriver_linux64.zip
           sudo mv chromedriver /usr/bin/chromedriver
-          ls -l /usr/bin/
           chromedriver --version
-          #chrome
-          #curl https://intoli.com/install-google-chrome.sh | bash
-          #sudo mv /usr/bin/google-chrome-stable /usr/bin/google-chrome
-          #google-chrome --version && which google-chrome
+          curl https://intoli.com/install-google-chrome.sh
+          sudo mv /usr/bin/google-chrome-stable /usr/bin/google-chrome
+          google-chrome --version && which google-chrome
+          
+        
+       
 
