Add Airflow & AWS codedeploy
docker compose (airflow)

--- a/yolov5/utils/docker/Dockerfile_worker
+++ b/yolov5/utils/docker/Dockerfile_worker
@@ -1,20 +1,16 @@
 # FROM spolo8/ubuntu-python3.8:1631644637
 FROM bitnami/airflow-worker:latest
 # Git clone
-# RUN apt-get update
-# RUN apt-get install -y git && 
-USER root
+RUN apt-get update
+RUN apt-get install -y git && apt-get install -y procps
 # RUN git clone https://github.com/farmboy-dev/Anus /usr/src/Anus 
 
 # # # install libaries
 # RUN python -m pip install --upgrade pip
-COPY requirements.txt /usr/src/Anus/requirements.txt
-# RUN pip install --no-cache -r ./requirements.txt
-RUN pip install --no-cache -r /usr/src/Anus/requirements.txt 
+RUN pip install --no-cache -r /usr/src/Anus/yolov5/requirements.txt 
 
 # Install ChromeDriver and Chrome
-
-RUN apt-get update && apt-get install -y wget && apt-get install -y unzip && apt-get install -y procps
+RUN apt-get install -y wget  && apt-get install -y unzip
 RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
 RUN apt install -y ./google-chrome-stable_current_amd64.deb
 RUN rm google-chrome-stable_current_amd64.deb
