--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,38 +1,65 @@
-name: Retrieve Base64 secret
+name: update codes
 on:
   push:
     branches: [ main ]
 jobs:
-  decode-secret:
+  CI/CD:
     runs-on: ubuntu-latest
+    # # These permissions are needed to interact with GitHub's OIDC Token endpoint.
+    # permissions:
+    #   id-token: write
+    #   contents: read
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v1
+      - name: Checkout
+        uses: actions/checkout@v3
+      
+      # Step 1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          python-version: 3.7
-      - name: Retrieve the secret and decode it to a file
-        env:
-          hidden: ${{ secrets.HIDDEN }}
-        run: |
-          pip install gdown
-          gdown ${hidden}
-          sudo mv hidden.py yolov5
-      - name: Install Chromedirver & chrome
-        run: |
-          # chromedriver
-          cd /tmp/
-          wget -q https://chromedriver.storage.googleapis.com/103.0.5060.53/chromedriver_linux64.zip
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/bin/chromedriver
-          chromedriver --version
-          # chrome
-          sudo apt-get -y install google-chrome-stable
-          sudo mv /usr/bin/google-chrome-stable /usr/bin/google-chrome
-          google-chrome --version && which google-chrome
-      - name: Install requirements
-        run: |
-          pip install requirements.txt
+          aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      # Step 2
+      - name: Pull Codes
+        run: aws deploy create-deployment \ 
+               --application-name test_cralwer \
+               --deployment-config-name CodeDeployDefault.OneAtATime \
+               --deployment-group-name crawler-group
+
+
+
+
+
+
+
+
+      # - name: Set up Python 3.7
+      #   uses: actions/setup-python@v1
+      #   with:
+      #     python-version: 3.7
+      # - name: Retrieve the secret and decode it to a file
+      #   env:
+      #     hidden: ${{ secrets.HIDDEN }}
+      #   run: |
+      #     pip install gdown
+      #     gdown ${hidden}
+      #     sudo mv hidden.py yolov5
+      # - name: Install Chromedirver & chrome
+      #   run: |
+      #     # chromedriver
+      #     cd /tmp/
+      #     wget -q https://chromedriver.storage.googleapis.com/103.0.5060.53/chromedriver_linux64.zip
+      #     unzip chromedriver_linux64.zip
+      #     sudo mv chromedriver /usr/bin/chromedriver
+      #     chromedriver --version
+      #     # chrome
+      #     sudo apt-get -y install google-chrome-stable
+      #     sudo mv /usr/bin/google-chrome-stable /usr/bin/google-chrome
+      #     google-chrome --version && which google-chrome
+      # - name: Install requirements
+      #   run: |
+      #     pip install requirements.txt
        
           
         
