--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
 jobs:
-  CI/CD:
+  updatecode:
     runs-on: ubuntu-latest
     # # These permissions are needed to interact with GitHub's OIDC Token endpoint.
     # permissions:
