--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,9 +22,12 @@ jobs:
           aws-region: us-east-1
       # Step 2
       - name: Pull Codes
-        run: aws deploy create-deployment --application-name test_cralwer \
-              --deployment-config-name CodeDeployDefault.OneAtATime \
-              --deployment-group-name crawler-group
+        run: |
+          aws deploy create-deployment \
+            --application-name test_cralwer \
+            --deployment-group-name crawler-group \
+            --deployment-config-name CodeDeployDefault.OneAtATime \
+            --github-location repository=${{ github.repository 
 
 
 
