--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,7 @@ jobs:
           aws deploy create-deployment \
             --application-name test_cralwer \
             --deployment-group-name crawler-group \
-            --deployment-config-name CodeDeployDefault.OneAtATime \
-            --github-location repository=${{ github.repository 
+            --deployment-config-name CodeDeployDefault.OneAtATime
 
 
 
