--- a/appspec.yml
+++ b/appspec.yml
@@ -4,14 +4,7 @@ files:
  - source: /
    destination: /home/ubuntu/Anus
    overwrite: yes
-
-permissions:
-  - object: /
-    pattern : "**"
-    mode : 755
-    owner : ubuntu
-    group : ubuntu
-
+file_exists_behavior: OVERWRITE
 hooks:
   AfterInstall:
    - location: scripts/fetch_code.sh
