--- a/appspec.yml
+++ b/appspec.yml
@@ -12,12 +12,12 @@ permissions:
     owner : ubuntu
     group : ubuntu
 
-hooks:
-  AfterInstall:
-   - location: scripts/fetch_code.sh
-     timeout: 300
-     runas: root
-  # ApplicationStart:
-  #  - location: scripts/start_server
-  #    timeout: 300
-  #    runas: root
+# hooks:
+#   AfterInstall:
+#    - location: scripts/fetch_code.sh
+#      timeout: 300
+#      runas: root
+#   # ApplicationStart:
+#   #  - location: scripts/start_server
+#   #    timeout: 300
+#   #    runas: root
