--- a/yolov5/utils/docker/docker-compose.yml
+++ b/yolov5/utils/docker/docker-compose.yml
@@ -31,9 +31,11 @@ services:
     volumes:
       - ./airflow/core/dags:/opt/bitnami/airflow/dags
       - ../../../../Anus:/usr/src/Anus
-      - ./airflow/core/sources/airflow.cfg:/opt/bitnami/airflow/airflow.cfg
+      # - ./airflow/core/sources/airflow.cfg:/opt/bitnami/airflow/airflow.cfg
       # - ./airflow/core/source:/bitnami/source
-      
+    ports:
+      - '5001:5001'
+    shm_size: '6gb'
   airflow-scheduler:
     image: bitnami/airflow-scheduler:latest
     environment:
@@ -47,7 +49,7 @@ services:
       - AIRFLOW_WEBSERVER_HOST=airflow
     volumes:
       - ./airflow/core/dags:/opt/bitnami/airflow/dags
-      - ./airflow/core/sources/airflow.cfg:/opt/bitnami/airflow/airflow.cfg
+      # - ./airflow/core/sources/airflow.cfg:/opt/bitnami/airflow/airflow.cfg
   airflow:
     image: bitnami/airflow:latest
     environment:
@@ -62,7 +64,7 @@ services:
       - AIRFLOW_EMAIL=user@example.com
     volumes:
       - ./airflow/core/dags:/opt/bitnami/airflow/dags
-      - ./airflow/core/sources/airflow.cfg:/opt/bitnami/airflow/airflow.cfg
+      # - ./airflow/core/sources/airflow.cfg:/opt/bitnami/airflow/airflow.cfg
     ports:
       - '8080:8080'
 volumes:
