--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,9 @@ name: update codes
 on:
   push:
     branches: [ main ]
+  paths-ignore:
+    - '**.md'
+    - '**.jpg'
 jobs:
   updatecode:
     runs-on: ubuntu-latest
